src/Shiny.AppDeviceBridge.RpiCamera/Interop/NativeMethods.cs

using System.Runtime.InteropServices;

namespace Shiny.AppDeviceBridge.RpiCamera.Interop;

/// <summary>
/// The libshinyrpi_camera.so entry points, one for one with native/shinyrpi-camera/include.
/// </summary>
/// <remarks>
/// Every signature is source-generated by <see cref="LibraryImportAttribute"/>, so nothing here
/// needs runtime marshalling and the binding stays trim- and AOT-safe.
///
/// The <c>const char *</c> returns come back as <see cref="nint"/> deliberately: those strings
/// belong to the shim and must not be freed, which is exactly what an automatically marshalled
/// string return would try to do.
/// </remarks>
internal static partial class NativeMethods
{
    /// <summary>
    /// The shim's ABI revision as this binding understands it. Must match
    /// SHINYRPI_CAMERA_ABI_VERSION in shinyrpi_camera.h; the two are checked against each
    /// other before any other call.
    /// </summary>
    public const int ExpectedAbiVersion = 1;

    /// <summary>Base name of the shared object. The runtime prefixes lib and appends .so.</summary>
    public const string LibraryName = "shinyrpi_camera";

    /* Library ------------------------------------------------------------------------- */

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_abi_version();

    [LibraryImport(LibraryName)]
    internal static partial nint shinyrpi_camera_libcamera_version();

    [LibraryImport(LibraryName)]
    internal static partial nint shinyrpi_camera_last_error();

    /* Manager ------------------------------------------------------------------------- */

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_manager_create(out nint manager);

    [LibraryImport(LibraryName)]
    internal static partial void shinyrpi_camera_manager_destroy(nint manager);

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_manager_count(nint manager, out int count);

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_manager_info(nint manager, int index, ref NativeCameraInfo info);

    /* Camera -------------------------------------------------------------------------- */

    [LibraryImport(LibraryName, StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int shinyrpi_camera_open(nint manager, string? id, out nint camera);

    [LibraryImport(LibraryName)]
    internal static partial void shinyrpi_camera_close(nint camera);

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_configure(nint camera, ref NativeStreamConfig config);

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_start(nint camera);

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_stop(nint camera);

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_dequeue_frame(nint camera, int timeoutMilliseconds, ref NativeFrame frame);

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_release_frame(nint camera, ulong frameId);

    [LibraryImport(LibraryName)]
    internal static partial void shinyrpi_camera_wake(nint camera);

    /* Controls ------------------------------------------------------------------------ */

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_set_control(nint camera, int control, double value);

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_get_control_info(
        nint camera,
        int control,
        out int supported,
        out double minimum,
        out double maximum,
        out double defaultValue
    );

    /* Diagnostics --------------------------------------------------------------------- */

    [LibraryImport(LibraryName)]
    internal static partial int shinyrpi_camera_get_stats(nint camera, ref NativeStats stats);

    /* Helpers ------------------------------------------------------------------------- */

    /// <summary>
    /// The shim's description of the last failure on this thread. Copied out immediately -
    /// the underlying buffer is reused by the next call on the same thread.
    /// </summary>
    internal static string LastError()
    {
        try
        {
            return Marshal.PtrToStringUTF8(shinyrpi_camera_last_error()) ?? "";
        }
        catch (Exception ex) when (ex is DllNotFoundException or EntryPointNotFoundException)
        {
            return "";
        }
    }

    /// <summary>The libcamera release the loaded shim was compiled against.</summary>
    internal static string LibCameraVersion()
        => Marshal.PtrToStringUTF8(shinyrpi_camera_libcamera_version()) ?? "unknown";
}
